[gd_scene load_steps=2 format=3 uid="uid://c4affix_indicator01"]

[ext_resource type="Script" path="res://scripts/affix_indicator.gd" id="1_affix_script"]

[node name="AffixIndicator" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 140.0
grow_horizontal = 0
script = ExtResource("1_affix_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.85)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.8, 1, 0.5)
mouse_filter = 2

[node name="BorderInner" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="ContentContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="IconContainer" type="CenterContainer" parent="ContentContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="AffixIcon" type="ColorRect" parent="ContentContainer/IconContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.3, 0.8, 1, 1)

[node name="LabelsContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="AffixTitle" type="Label" parent="ContentContainer/LabelsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ACTIVE EFFECT"
vertical_alignment = 1

[node name="AffixDescription" type="Label" parent="ContentContainer/LabelsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Effect description here"
autowrap_mode = 2
